# CS-Notes

./: To do list.md  学习思路.md
000 数据结构/oiwiki数据结构/: 哈希表.md
000-DataStructures/: P1955.cpp  P4305.cpp  test
000-DataStructures/oiwiki数据结构/: hashTable.cpp  test  哈希表.md  并查集.cpp  负数取模.cpp  闭散列表哈希.cpp
000-DataStructures/严数据结构学习笔记/: 第一章 绪论.md  第二章 线性表.md
000-DataStructures/严数据结构学习笔记/code/: 复数.cpp  顺序表.cpp
000-DataStructures/数据结构(C++ Plus实现)学习笔记/第三章/: 第三章 无序列表ADT.md
000-DataStructures/数据结构(C++ Plus实现)学习笔记/第二章/: 第二章 数据设计与实现.md
100-Algorithms/挑战程序设计竞赛笔记/第二章 搜索/: 2.1 搜索.md  2.2 贪心法.md
200 刷题/: P5020.cpp
200-ProblemSets/: P1060.cpp  P1855.cpp  P5020.cpp
200-ProblemSets/.cph/: .P_2482_SDOI_2010_猪国杀.cpp_a09dcd039febcd1efb775ade2a9b9ff6.prob
200-ProblemSets/Codeforce/Round 1050(div.4)/: A. Sublime Sequence.cpp  B. Lasers.cpp  C. Pacer.cpp  D. Destruction of the Dandelion Fields.cpp
200-ProblemSets/Codeforce/Round 1051(div.2)/: A_All_Lengths_SubtractionA_所有长度减法.cpp  B_Discounts.cpp
200-ProblemSets/Codeforce/Round 1054(div.3)/: A_Be_Positive_A_保持积极.cpp  B_Unconventional_Pairs_B_非传统配对.cpp  C_MEX_rose_C_MEX_上涨.cpp  F_Nezuko_in_the_ClearingF_Nezuko_在林间空地.cpp
200-ProblemSets/Codeforce/Round 1059(Div.3)/: 2162A.cpp
200-ProblemSets/Codeforce/Round 182(div.2)/: A_Cut_the_Array.cpp  A题小结.md  B_Maximum_Cost_Permutation.cpp  B题小结.md
200-ProblemSets/Leetcode/Hot100/: 160. 相交链表.md  234. 回文链表.md  236. 二叉树的最近公共祖先.md  49. 字母异位词分组.md
200-ProblemSets/[kuangbin带你飞]专题一 简单搜索/: 25.9.13总结.md  A - 棋盘问题.cpp  B - Dungeon Master.cpp  C - Catch That Cow.cpp  D - Fliptile.cpp  E - Find The Multiple.cpp
200-ProblemSets/[kuangbin带你飞]专题一 简单搜索/.cph/: .D - Fliptile.cpp_dfd8b6123e4aa72dc977a38103e0bcfe.prob  .Dtest.cpp_e131a5dc8cb4377e238b0b730cbf86a0.prob
200-ProblemSets/[kuangbin带你飞]专题一 简单搜索/ac后复盘/: A - 棋盘问题.cpp
200-ProblemSets/线性动态规划/: P1048.cpp  P1048滚动数组优化.cpp  P1868_11.out  P_1020_NOIP_1999_提高组_导弹拦截.cpp  P_1091_NOIP_2004_提高组_合唱队形.cpp  P_1095_NOIP_2007_普及组_守望者的逃离.cpp  P_1216_IOI_1994_USACO_1_5_数字三角形_Number_Triangles.cpp  P_1541_NOIP_2010_提高组_乌龟棋.cpp  P_1868_饥饿的奶牛.cpp  乌龟棋-扁平化vector实现.cpp
200-ProblemSets/线性动态规划/.cph/: .P1048.cpp_aa9b38b3b0f58244cbc8852fffa70942.prob  .P1048滚动数组优化.cpp_f3b8ac9ed53bca0c4498e5278bf4e259.prob  .P_1020_NOIP_1999_提高组_导弹拦截.cpp_740e5bde7e20762e6534524d167d7d82.prob  .P_1091_NOIP_2004_提高组_合唱队形.cpp_172adf5ff423c5a8e38fcecd3790b507.prob  .P_1095_NOIP_2007_普及组_守望者的逃离.cpp_77d54fad3200de8ba715295d76cff920.prob  .P_1216_IOI_1994_USACO_1_5_数字三角形_Number_Triangles.cpp_23c7c7180a98785831d3e137e62e2074.prob  .P_1541_NOIP_2010_提高组_乌龟棋.cpp_6d638dd35b8665d707cf4b9b477fccc1.prob  .P_1541_NOIP_2010_提高组_乌龟棋.cpp_727bd6c2ad4a475a212f15181a194ade.prob  .P_1868_饥饿的奶牛.cpp_1bd49d0b74b3b6cc20b7e8b9e3f80377.prob  .P_2482_SDOI_2010_猪国杀.cpp_3d1e25e1a93c123530a9821d4af6c0aa.prob  .T_668541_语言月赛_202509_朱猪时刻.cpp_20d3862581c6ed1aa76ada9d5aa5dd5d.prob  .T_668542_语言月赛_202509_智慧食堂.cpp_2aa6d0c236b672aae82a33ac94485734.prob  .T_668543_语言月赛_202509_训练记录.cpp_6f44e3bfaf46acbf25ea42a1293067d6.prob  .T_668543_语言月赛_202509_训练记录.go_bba849c6ec0bb70cd496e99318caf5b2.prob  .T_668544_语言月赛_202509_你这题至少_3000.cpp_aa575279b71ec53a86b1dbe6420ccee2.prob  .T_668547_语言月赛_202509_挂号系统.cpp_3f66380a2ad7c12aba8b039aa44e0b86.prob  (+1 more)
300 语言/C++/: C++ 面向对象编程.md  结构体示例.cpp
400-DevTools/cmake/: README.md  快速开始.md
400-DevTools/cmake/lesson4-project-structure/: CMakeLists.txt  README.md
400-DevTools/cmake/lesson4-project-structure/include/student/: Student.h  StudentManager.h
400-DevTools/cmake/lesson4-project-structure/src/: Student.cpp  StudentManager.cpp  main.cpp
400-DevTools/cmake/lesson6-build-options/: CMakeLists.txt  README.md  config.h.in  main.cpp
400-DevTools/cmake/lesson7-final-project/: CMakeLists.txt  README.md  config.h.in
600 课程/300 高等数学/: 无穷级数.md
600 课程/400 线性代数/: 向量及其线性运算.md  向量的运算.md  线性代数.md  线性代数大复习.md
600 课程/500 大学物理/: 大学物理总复习ppt.md  物理复习总览.md
600-Courses/300 高等数学/: 刷题时候遇到的问题.md  未命名.md
600-Courses/400 线性代数/: 刷题时候遇到的问题之线性代数.md  我对线性代数的思考.md  特征向量与特征值.md
600-Courses/500 大学物理/: 大学物理复习刷题.md
600-Courses/导论/: 小数点后10转2.md
600-Courses/程序设计/: 程序设计要求.md
998-Inbox/: BankAccount.cpp  BankAccount2.cpp  Book.cpp  DynamicArray.cpp  Problem1.cpp  Problem2.cpp  Problem3.cpp  Rectangle.cpp  Zoo.cpp  ptr.cpp  shape.cpp  swap.cpp  test.cpp  常数项级数的审敛法 (正项级数).md  常数项级数的审敛法（任意项级数）.md  常数项级数的概念和性质.md
998-Inbox/.cph/: .BankAccount2.cpp_51deed3e1a7998fc1316cca60824d7be.prob  .Book.cpp_b2481f0ca9792d0ad62b8eb5f0286c41.prob  .DynamicArray.cpp_542a871de2245a32215e72f40ebfe11e.prob  .Problem1.cpp_1973084f92a2abf8b4a6ba1cd0dcf274.prob  .Problem2.cpp_b7a90de959bc8973d95a4db829521f02.prob  .Problem3.cpp_da6e73cd366bfa0581a413a6d0474021.prob  .Rectangle.cpp_86e9a630f9cc445c9428f79532d69a18.prob  .Zoo.cpp_3f9b2b5bc230fe985fcf6fba2bc8b013.prob  .ptr.cpp_eb5ef57a293eff727022d0e63c174692.prob  .shape.cpp_566b5b7a7c79e249c8dc6d7204d96595.prob  .swap.cpp_3efed9ab6fcd2e5b11864b9a44e3a8ff.prob  .test.cpp_1d6d7641ec592857bd30192ba8d4be6c.prob
999-Attachments/Excalidraw/: 逻辑结构层次图.excalidraw.md
(+59 files in other folders)
